# MediaScribe

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile.api  Dockerfile.worker  pyproject.toml
backend/app/: config.py
backend/app/api/: dependencies.py  main.py  middleware.py
backend/app/api/db/: mongo.py
backend/app/api/routes/: health.py  jobs.py
backend/app/api/services/: jobs_service.py
backend/app/core/: correlation.py  exceptions.py  logging.py  metrics.py
backend/app/domain/: enums.py  models.py  schemas.py
backend/app/storage/: __init__.py  base.py  local.py
backend/app/worker/: celery_app.py  chunk_transcription.py  metrics_server.py  orchestration.py  reaper.py  repository.py  stitching.py  tasks.py
backend/app/worker/services/media/: chunker.py  ffmpeg.py  stitch.py
backend/app/worker/services/transcription/: __init__.py  base.py  fake.py  whisper.py
backend/tests/: conftest.py
backend/tests/integration/: test_jobs_api.py  test_jobs_service.py  test_jobs_service_extended.py  test_jobs_service_promote.py  test_worker_repository.py
backend/tests/unit/: test_beat_reaper.py  test_chunker.py  test_ffmpeg.py  test_jobs_in_flight_gauge.py  test_local_storage.py  test_stitch.py  test_stitch_edge.py  test_tasks_language.py  test_validate_content_type.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: FileUploader.tsx  Highlight.tsx  JobActions.tsx  JobAudioPlayer.tsx  JobListItem.tsx  SearchBar.tsx  Stepper.tsx  TranscriptView.tsx
frontend/src/hooks/: useJobsManager.ts  usePagination.ts  useSearch.ts
frontend/src/lib/: format.ts
frontend/src/styles/: base.css  components.css  feedback.css  job-item.css
observability/: alerts.yml  prometheus.yml
observability/grafana/dashboards/: dashboard.yml  mediascribe.json
